src/test/deca/syntax/invalid/without_class/error_using_cast_operator.deca
// Description:
//    Error using cast operator () between two objects 
//
// Result:
//    no viable alternative at input 'objectB'
//    line 14


class A {}
class B extends A {}

{
    B objectB = new B();
    A objectA = A objectB;
}